01_K8s_Exercises/task_03_Networking_and_Ingress/Exercises/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: database
  name: database
  namespace: team-alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: database
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
