01_K8s_Exercises/task_03_Networking_and_Ingress/Exercises/networkpolicy_team-beta_deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: team-beta
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
           kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
           k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
